--- a/Backend/package.json
+++ b/Backend/package.json
@@ -12,12 +12,15 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.20.2",
+    "cookie": "^0.6.0",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.4.4",
     "express": "^4.18.2",
     "joi": "^17.12.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.1.3",
-    "nodemon": "^3.0.3"
+    "nodemon": "^3.0.3",
+    "parser": "^0.1.4"
   }
 }
